--- a/linear_regression_model_(master copy).ipynb
+++ b/linear_regression_model_(master copy).ipynb
@@ -381,7 +381,8 @@
    ],
    "source": [
     "# reading in csv file\n",
-    "dataset = pd.read_csv('data/population.csv', encoding='cp1252')\n",
+    "# dataset = pd.read_csv('data/population.csv', encoding='cp1252')\n",
+    "dataset = pd.read_csv('population_linear_model.csv', encoding='cp1252')\n",
     "dataset.head()\n",
     "dataset.describe()"
    ]
