--- a/linear_regression_model_(master copy).ipynb
+++ b/linear_regression_model_(master copy).ipynb
@@ -46,7 +46,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<_io.TextIOWrapper name='data/population.csv' mode='r' encoding='cp1252'>\n"
+      "<_io.TextIOWrapper name='population_linear_model.csv' mode='r' encoding='cp1252'>\n"
      ]
     }
    ],
@@ -60,7 +60,7 @@
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.metrics import r2_score\n",
     "\n",
-    "with open('data/population.csv') as f:\n",
+    "with open('population_linear_model.csv') as f:\n",
     "   print(f)"
    ]
   },
