--- a/polynomial_regression_analysis (master copy).ipynb
+++ b/polynomial_regression_analysis (master copy).ipynb
@@ -50,7 +50,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<_io.TextIOWrapper name='data/population.csv' mode='r' encoding='cp1252'>\n"
+      "<_io.TextIOWrapper name='population_linear_model.csv' mode='r' encoding='cp1252'>\n"
      ]
     }
    ],
@@ -64,7 +64,7 @@
     "from sklearn.preprocessing import PolynomialFeatures\n",
     "from sklearn.linear_model import LinearRegression\n",
     "\n",
-    "with open('data/population.csv') as f:\n",
+    "with open('population_linear_model.csv') as f:\n",
     "   print(f)"
    ]
   },
